unpackaged/main/default/objects/Lead/fields/Associated_SE__c.field-meta.xml
<CustomField>
    <fullName>Associated_SE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>link the SE who was associated to this lead here.</inlineHelpText>
    <label>Associated SE</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$UserRole.Name</field>
            <operation>contains</operation>
            <value>Solution Engineer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Associated_Leads_SE</relationshipName>
    <type>Lookup</type>
</CustomField>