unpackaged/main/default/objects/Lead/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <description>campaign name</description>
    <label>Campaign</label>
    <type>TextArea</type>
</CustomField>