unpackaged/main/default/objects/Lead/fields/CB_Company_Domain__c.field-meta.xml
<CustomField>
    <fullName>CB_Company_Domain__c</fullName>
    <label>CB Company Domain</label>
    <length>100</length>
    <type>Text</type>
</CustomField>