unpackaged/main/default/objects/Lead/fields/CFCR_Admin_Score_Increment_Audit__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Admin_Score_Increment_Audit__c</fullName>
    <description>Set with the date time that the Admin Score Increment field was toggled for rescoring trigger reanimation timing audit.</description>
    <inlineHelpText>Set with the date time that the Admin Score Increment field was toggled for rescoring trigger reanimation timing audit.</inlineHelpText>
    <label>Admin Score Increment Audit</label>
    <type>DateTime</type>
</CustomField>