unpackaged/main/default/objects/Lead/fields/CFCR_FCCRM_Threshold__c.field-meta.xml
<CustomField>
    <fullName>CFCR_FCCRM_Threshold__c</fullName>
    <description>Full Circle CRM Engagement Threshold. Modify this formula as your requirements change.</description>
    <formula>/*the value in this field is compared against the configured Full Circle CRM engagement score*/
/*modify this formula as your company's engagement threshold changes*/
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Full Circle CRM Engagement Threshold. Modify this formula as your requirements change.</inlineHelpText>
    <label>FCCRM Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>