unpackaged/main/default/objects/Lead/fields/CFCR_Response__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Response__c</fullName>
    <description>Indicates if you need to add a sales campaign to work this lead or create an opportunity</description>
    <formula>/*VIEW STATIC RESOURCES AND UPDATE LINKS*/
IF (
OR( /*inactive status values */
ISPICKVAL( Status , "Non Opt-In (Illegal)"),
ISPICKVAL( Status , "Default"),
ISPICKVAL( Status , "Existing Opportunity"),
ISPICKVAL( Status , "Disqualified"),
ISPICKVAL( Status , "Unable to Connect"),
ISPICKVAL( Status , "On Hold"),
ISPICKVAL( Status , "Default"),
ISPICKVAL( Status , "Customer")),
IMAGE("/resource/1596596568000/fccrm_Add_Campaign_Image","Add a Response",16,180),
IMAGE("/resource/1596596568000/fccrm_Has_Campaign_Image","Has Response",16,180))</formula>
    <inlineHelpText>Indicates if you need to add a sales campaign to work this lead or create an opportunity</inlineHelpText>
    <label>Response:</label>
    <type>Text</type>
</CustomField>