unpackaged/main/default/objects/Lead/fields/CFCR_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>CFCR_Status_Reason__c</fullName>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Researcher/ press/ analyst</fullName>
            </value>
            <value>
                <fullName>Moved to Self Service</fullName>
            </value>
            <value>
                <fullName>Not involved with Grafana-related software</fullName>
            </value>
            <value>
                <fullName>Bad email</fullName>
            </value>
            <value>
                <fullName>Bad phone</fullName>
            </value>
            <value>
                <fullName>No longer at company</fullName>
            </value>
            <value>
                <fullName>Exhausted tries</fullName>
            </value>
            <value>
                <fullName>Reach out in [timeline]</fullName>
            </value>
            <value>
                <fullName>Budget, Not a priority now</fullName>
            </value>
            <value>
                <fullName>Went silent</fullName>
            </value>
            <value>
                <fullName>Support request</fullName>
            </value>
            <value>
                <fullName>Vendor Spam</fullName>
                <label>Vendor spam</label>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Missing feature</fullName>
            </value>
            <value>
                <fullName>Stale - Ops Clean Up</fullName>
            </value>
            <value>
                <fullName>Embargoed Country</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
                <isActive>false</isActive>
                <label>Disqualified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>