unpackaged/main/default/objects/Lead/fields/Churned_User__c.field-meta.xml
<CustomField>
    <fullName>Churned_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Churned User</label>
    <type>Checkbox</type>
</CustomField>