unpackaged/main/default/objects/Lead/fields/Clearbit_Estimated_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Estimated_Revenue__c</fullName>
    <label>Clearbit Estimated Revenue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>