unpackaged/main/default/objects/Lead/fields/Clearbit_Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Industry_Group__c</fullName>
    <label>Clearbit Industry Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>