unpackaged/main/default/objects/Lead/fields/Clearbit_Sector__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Sector__c</fullName>
    <label>Clearbit Sector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>