unpackaged/main/default/objects/Lead/fields/Clearbit_Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Sub_Industry__c</fullName>
    <label>Clearbit Sub Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>