unpackaged/main/default/objects/Lead/fields/Cloud_Trial__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cloud Trial</label>
    <type>Checkbox</type>
</CustomField>