unpackaged/main/default/objects/Lead/fields/Committed_MRR__c.field-meta.xml
<CustomField>
    <fullName>Committed_MRR__c</fullName>
    <description>Calculated by taking Committed ARR and dividing by 12.</description>
    <formula>Committed_ARR__c / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated by taking Committed ARR and dividing by 12.</inlineHelpText>
    <label>Committed MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>