unpackaged/main/default/objects/Lead/fields/contract_type_id__c.field-meta.xml
<CustomField>
    <fullName>contract_type_id__c</fullName>
    <description>this field is brought over from gcom for contract_type_id</description>
    <inlineHelpText>this field is brought over from gcom for contract_type_id</inlineHelpText>
    <label>contract_type_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>