unpackaged/main/default/objects/Lead/fields/Data_Sources__c.field-meta.xml
<CustomField>
    <fullName>Data_Sources__c</fullName>
    <label>Data Sources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Sources</valueSetName>
    </valueSet>
</CustomField>