unpackaged/main/default/objects/Lead/fields/Date_Changed_to_Status_Working__c.field-meta.xml
<CustomField>
    <fullName>Date_Changed_to_Status_Working__c</fullName>
    <description>This is the date when the lead status is changed from New to Working.</description>
    <label>Date Changed to Status: Working</label>
    <type>Date</type>
</CustomField>