unpackaged/main/default/objects/Lead/fields/Days_in_Working_before_Converted__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Working_before_Converted__c</fullName>
    <formula>ConvertedDate -  Date_Changed_to_Status_Working__c</formula>
    <label>Days in Working before Converted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>