unpackaged/main/default/objects/Lead/fields/DUNS__c.field-meta.xml
<CustomField>
    <fullName>DUNS__c</fullName>
    <description>Duns number of Lead</description>
    <inlineHelpText>Duns number of Lead</inlineHelpText>
    <label>DUNS #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>