unpackaged/main/default/objects/Lead/fields/G_Com_Org_Slug__c.field-meta.xml
<CustomField>
    <fullName>G_Com_Org_Slug__c</fullName>
    <label>G.Com Org Slug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>