unpackaged/main/default/objects/Lead/fields/gcomuserID__c.field-meta.xml
<CustomField>
    <fullName>gcomuserID__c</fullName>
    <label>gcomuserID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>