unpackaged/main/default/objects/Lead/fields/Geo__c.field-meta.xml
<CustomField>
    <fullName>Geo__c</fullName>
    <formula>IF(ISBLANK(Country), "No Country",

IF( Country = "United States", "US", "INTL"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geo</label>
    <type>Text</type>
</CustomField>