unpackaged/main/default/objects/Lead/fields/HGI_IT_Budget__c.field-meta.xml
<CustomField>
    <fullName>HGI_IT_Budget__c</fullName>
    <description>HG Insights Company IT Budget</description>
    <inlineHelpText>HG Insights Company IT Budget</inlineHelpText>
    <label>HGI IT Budget</label>
    <length>255</length>
    <type>Text</type>
</CustomField>