unpackaged/main/default/objects/Lead/fields/HGI_Last_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>HGI_Last_Verified_Date__c</fullName>
    <description>HG Insights Last Verified date for Grafana or Prometheus</description>
    <inlineHelpText>HG Insights Last Verified date for Grafana or Prometheus</inlineHelpText>
    <label>HGI Last Verified Date</label>
    <type>Date</type>
</CustomField>