unpackaged/main/default/objects/Lead/fields/HGI_Prometheus_Intensity__c.field-meta.xml
<CustomField>
    <fullName>HGI_Prometheus_Intensity__c</fullName>
    <description>HG Insights Prometheus Product Intensity Score</description>
    <inlineHelpText>HG Insights Prometheus Product Intensity Score</inlineHelpText>
    <label>HGI Prometheus Intensity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>