unpackaged/main/default/objects/Lead/fields/ID_18_digit__c.field-meta.xml
<CustomField>
    <fullName>ID_18_digit__c</fullName>
    <description>This field converts the 15 digit ID to an 18 digit ID</description>
    <label>ID (18 digit)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>