unpackaged/main/default/objects/Lead/fields/Interests__c.field-meta.xml
<CustomField>
    <fullName>Interests__c</fullName>
    <label>Interests</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grafana Enterprise</fullName>
            </value>
            <value>
                <fullName>Grafana Cloud</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>