unpackaged/main/default/objects/Lead/fields/Latest_Campaign_UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>Latest_Campaign_UTM_Source__c</fullName>
    <label>Latest Campaign UTM Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>