unpackaged/main/default/objects/Lead/fields/Lead_Flow_Check__c.field-meta.xml
<CustomField>
    <fullName>Lead_Flow_Check__c</fullName>
    <label>Lead Flow Check</label>
    <length>150</length>
    <type>Text</type>
</CustomField>