unpackaged/main/default/objects/Lead/fields/Lead_ID_18_digit__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID_18_digit__c</fullName>
    <description>duplicate as the ID (18 Digit) field does not populate (it's a text field)</description>
    <formula>CASESAFEID(Id)</formula>
    <label>Lead ID (18 digit)</label>
    <type>Text</type>
</CustomField>