unpackaged/main/default/objects/Lead/fields/Mapped_SDR_ID__c.field-meta.xml
<CustomField>
    <fullName>Mapped_SDR_ID__c</fullName>
    <label>Mapped SDR ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>