unpackaged/main/default/objects/Lead/fields/Matched_Account_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Annual_Revenue__c</fullName>
    <label>Matched Account Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>