unpackaged/main/default/objects/Lead/fields/Matched_Account_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Billing_Country__c</fullName>
    <label>Matched Account Billing Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>