unpackaged/main/default/objects/Lead/fields/Matched_Account_Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Billing_Postal_Code__c</fullName>
    <label>Matched Account Billing Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>