unpackaged/main/default/objects/Lead/fields/Matched_Account_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Billing_State__c</fullName>
    <label>Matched Account Billing State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>