unpackaged/main/default/objects/Lead/fields/Matched_Account_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_ID_18__c</fullName>
    <label>Matched Account ID (18)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>