unpackaged/main/default/objects/Lead/fields/Matched_Account_No_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_No_of_Employees__c</fullName>
    <label>Matched Account No. of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>