unpackaged/main/default/objects/Lead/fields/Matched_Account_Owned_by_Running_User__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Owned_by_Running_User__c</fullName>
    <formula>Matched_Account_Owner__c = $User.FirstName + " " + $User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matched Account Owned by Running User</label>
    <type>Checkbox</type>
</CustomField>