unpackaged/main/default/objects/Lead/fields/Matched_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Owner__c</fullName>
    <label>Matched Account Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>