unpackaged/main/default/objects/Lead/fields/Matched_Account_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Owner_Role__c</fullName>
    <label>Matched Account Owner Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>