unpackaged/main/default/objects/Lead/fields/Matched_Account_SDR__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_SDR__c</fullName>
    <description>This field is written by Lean Data. It pulls the Mapped SDR field from the User object on the Account Owner</description>
    <label>Matched Account SDR [Old - Do Not Use]</label>
    <length>100</length>
    <type>Text</type>
</CustomField>