unpackaged/main/default/objects/Lead/fields/Matched_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Status__c</fullName>
    <label>Matched Account Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>