unpackaged/main/default/objects/Lead/fields/Matched_Account_Website__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Website__c</fullName>
    <label>Matched Account Website</label>
    <length>100</length>
    <type>Text</type>
</CustomField>