unpackaged/main/default/objects/Lead/fields/Meeting_Set_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Set_Date__c</fullName>
    <label>Meeting Set Date</label>
    <type>DateTime</type>
</CustomField>