unpackaged/main/default/objects/Lead/fields/Not_Owned_by_Mapped_SDR__c.field-meta.xml
<CustomField>
    <fullName>Not_Owned_by_Mapped_SDR__c</fullName>
    <formula>AND(NOT(ISBLANK(Matched_Account_SDR__c)),Mapped_SDR_ID__c &lt;&gt; OwnerId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Owned by Mapped SDR</label>
    <type>Checkbox</type>
</CustomField>