unpackaged/main/default/objects/Lead/fields/Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Amount__c</fullName>
    <description>This is the amount that the SDR suspects the opportunity will be worth</description>
    <inlineHelpText>This is the potential opportunity value. This should be set prior to converting the lead to an account/contact/opportunity. GUIDELINE: Grafana Cloud Advanced - $25k, Grafana Enterprise - $40k, GEM or GEL - $100k, OEM Deals - $100k</inlineHelpText>
    <label>Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>