unpackaged/main/default/objects/Lead/fields/OpsMgmt__c.field-meta.xml
<CustomField>
    <fullName>OpsMgmt__c</fullName>
    <description>field for Ops Use Only</description>
    <inlineHelpText>field for Ops Use Only</inlineHelpText>
    <label>OpsMgmt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>