unpackaged/main/default/objects/Lead/fields/orgtrial_amount__c.field-meta.xml
<CustomField>
    <fullName>orgtrial_amount__c</fullName>
    <description>this field is brought over from gcom for orgtrial_amount</description>
    <inlineHelpText>this field is brought over from gcom for  orgtrial_amount</inlineHelpText>
    <label>orgtrial_amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>