unpackaged/main/default/objects/Lead/fields/orgtrial_hlUsage__c.field-meta.xml
<CustomField>
    <fullName>orgtrial_hlUsage__c</fullName>
    <label>orgtrial_hlUsage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>