unpackaged/main/default/objects/Lead/fields/orgtrial_hmCurrentGraphiteUsage__c.field-meta.xml
<CustomField>
    <fullName>orgtrial_hmCurrentGraphiteUsage__c</fullName>
    <description>hosted metrics current graphite usage</description>
    <label>orgtrial_hmCurrentGraphiteUsage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>