unpackaged/main/default/objects/Lead/fields/orgtrial_hmCurrentPrometheusUsage__c.field-meta.xml
<CustomField>
    <fullName>orgtrial_hmCurrentPrometheusUsage__c</fullName>
    <label>orgtrial_hmCurrentPrometheusUsage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>