unpackaged/main/default/objects/Lead/fields/orgtrial_hmUsage__c.field-meta.xml
<CustomField>
    <fullName>orgtrial_hmUsage__c</fullName>
    <description>hosted metrics cumulative month to date usage- graphite+prometheus</description>
    <label>orgtrial_hmUsage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>