unpackaged/main/default/objects/Lead/fields/orgtrial_memberCnt__c.field-meta.xml
<CustomField>
    <fullName>orgtrial_memberCnt__c</fullName>
    <description>trial member count</description>
    <label>orgtrial_memberCnt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>