unpackaged/main/default/objects/Lead/fields/orgtrial_trialEndDate__c.field-meta.xml
<CustomField>
    <fullName>orgtrial_trialEndDate__c</fullName>
    <label>orgtrial_trialEndDate</label>
    <type>DateTime</type>
</CustomField>