unpackaged/main/default/objects/Lead/fields/orgtrial_trialStartDate__c.field-meta.xml
<CustomField>
    <fullName>orgtrial_trialStartDate__c</fullName>
    <label>orgtrial_trialStartDate</label>
    <type>DateTime</type>
</CustomField>