unpackaged/main/default/objects/Lead/fields/Originating_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Originating_Campaign__c</fullName>
    <label>Originating Campaign</label>
    <type>TextArea</type>
</CustomField>