unpackaged/main/default/objects/Lead/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <formula>Owner:User.Role_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Role</label>
    <type>Text</type>
</CustomField>