unpackaged/main/default/objects/Lead/fields/Paid_User__c.field-meta.xml
<CustomField>
    <fullName>Paid_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid User</label>
    <type>Checkbox</type>
</CustomField>