unpackaged/main/default/objects/Lead/fields/Pricing_Request__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pricing Request</label>
    <type>Checkbox</type>
</CustomField>