unpackaged/main/default/objects/Lead/fields/Product_Detail__c.field-meta.xml
<CustomField>
    <fullName>Product_Detail__c</fullName>
    <label>Product Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>