unpackaged/main/default/objects/Lead/fields/Product_s__c.field-meta.xml
<CustomField>
    <fullName>Product_s__c</fullName>
    <description>GrafanaCloud
Enterprise Subscription
Pro Subscription
Basic Subscription
worldPing
Training
metricTank</description>
    <label>Products(OLD)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GrafanaCloud</fullName>
            </value>
            <value>
                <fullName>Enterprise Subscription</fullName>
            </value>
            <value>
                <fullName>Pro Subscription</fullName>
            </value>
            <value>
                <fullName>Basic Subscription</fullName>
            </value>
            <value>
                <fullName>worldPing</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>metricTank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>