unpackaged/main/default/objects/Lead/fields/Reseller__c.field-meta.xml
<CustomField>
    <fullName>Reseller__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reseller</label>
    <type>Checkbox</type>
</CustomField>