unpackaged/main/default/objects/Lead/fields/Score_Details__c.field-meta.xml
<CustomField>
    <fullName>Score_Details__c</fullName>
    <label>Score Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>