unpackaged/main/default/objects/Lead/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <label>Shipping Address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>