unpackaged/main/default/objects/Lead/fields/Use_Case_Detail__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_Detail__c</fullName>
    <label>Use Case Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>