unpackaged/main/default/objects/Lead/validationRules/Cannot_Convert_Lead_without_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Convert_Lead_without_Amount</fullName>
    <active>false</active>
    <description>In order to convert a lead, the amount field must be populated if you're an SDR</description>
    <errorConditionFormula>AND(CONTAINS($User.Role_Name__c,'SDR'), ISBLANK( Opportunity_Amount__c ),  IsConverted = True)</errorConditionFormula>
    <errorMessage>Please enter an opportunity amount in order to convert this lead.</errorMessage>
</ValidationRule>