unpackaged/main/default/objects/Lead/listViews/AC_s_leads.listView-meta.xml
<ListView>
    <fullName>AC_s_leads</fullName>
    <columns>Notes__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>Latest_Campaign__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Opt-In Untouched,Marketing Auto-Engage,Sales Attempting,Sales In Contact,Disqualified,Unable to Connect,On Hold</value>
    </filters>
    <filters>
        <field>Matched_Account_Owner__c</field>
        <operation>contains</operation>
        <value>ian osborn</value>
    </filters>
    <label>Ian Osborn - Matched Account Leads</label>
</ListView>